--- a/Assets/Plugins/Android/AndroidManifest.xml
+++ b/Assets/Plugins/Android/AndroidManifest.xml
@@ -1,10 +1,9 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    package="YOUR_PACKAGE_NAME" >
+    package="tmy.jack.ofuline" >
 	<!-- Put your package name here. -->
 
-	 <uses-sdk android:minSdkVersion="14"/>
     <uses-permission android:name="android.permission.WAKE_LOCK" />
 
 
